2001-08-05 14:20 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *include/hbcomp.h
    *source/compiler/cmdcheck.c
    *source/compiler/hbusage.c
        * added new command line switch: -ki
        * added new flag: HB_COMPFLAG_HB_INLINE
        This switch enables support for HB_INLINE syntax
        (by default it is disabled)
        * all options used with -k switch are letter case sensitive
        * -kc (Clipper compatibility) clears all other switches (minimal
          set of features)
        
    *source/compiler/harbour.l
        * added support for -ki command line switch
        
    *source/compiler/harbour.sly
    *source/compiler/harbour.y
        * fixed line numer issues in generated pcode

2001-08-04 18:40 GMT -3  Luiz Rafael Culik<culik@sl.conex.net>
   *utils/hbmake/hbmake.prg
     * Small fix to the library edit mode of hbmake

2001-08-04 13:50 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.l
   * source/compiler/harbour.slx
     * Added inline c support for hb_comp_iLanguage == LANG_OBJ_MODULE

   * source/compiler/harbour.sly
     * Added support for HB_COMP_ISSUPPORTED( HB_COMPFLAG_XBASE ) in Statement : ( MacroVar and MacroExpr ) to sync with harbour.y

2001-08-04 11:00 UTC-0800 Ron Pinkas <ron@profit-master.com>
    * source/vm/macro.c
      ! Added missing ; in line 956

2001-08-04 15:15 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    * doc/en/compiler.txt
    * include/hbapi.h
    * include/hbcomp.h
    * include/hbexpra.c
    * include/hbexprb.c
    * include/hbmacro.h
    * source/compiler/cmdcheck.c
    * source/compiler/expropta.c
    * source/compiler/exproptb.c
    * source/compiler/harbour.c
    * source/compiler/harbour.y
    * source/compiler/hbfunchk.c
    * source/compiler/hbusage.c
        * added command line switch which controls a compilation
          compatibility level -k<modes>
          Currently supported modes (can be joined):